[package]
name = "rospo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["std", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.45", features = ["full"] }
russh = "0.54"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
internal-russh-forked-ssh-key = { version = "0.6.11", features = ["std", "ecdsa", "p521", "rand_core"] }
p521 = { version = "0.13.3", features = ["ecdsa", "pem", "std"] }
sec1 = { version = "0.7.3", features = ["std"] }

[dev-dependencies]
serde_json = "1.0"
