[package]
name = "rospo"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.49", features = ["derive", "std", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.45", features = ["full"] }
russh = "0.58"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
internal-russh-forked-ssh-key = { version = "0.6.11", features = ["std", "ecdsa", "p521", "rand_core"] }
p521 = { version = "0.13.3", features = ["ecdsa", "pem", "std"] }
sec1 = { version = "0.7.3", features = ["std"] }
russh-sftp = "2.1.1"
nix = { version = "0.29", features = ["term", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
futures = "0.3"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.13"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }
